Cart/Checkout (part 2 of 2). Order complete page.

--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,7 @@
 						<li><a href="page-shop-wishlist.html">Избранные товары</a></li>
 						<li><a href="page-shop-compare.html">Сравнение товаров</a></li>
 						<li><a href="page-shop-cart.html">Корзина</a></li>
+						<li><a href="page-shop-order.html">Спасибо за заказ</a></li>
 					</ol>
 				</div>
 			</div>
