--- a/app/page-shop-category.html
+++ b/app/page-shop-category.html
@@ -179,46 +179,7 @@
 						</div>
 
 						<!-- Pagination -->
-						<div class="pagination">
-							<ul class="pagination-wrapper">
-								<li class="pagination-button pagination-button-prev _disabled">
-									<a href="#">
-										<svg class="icon icon-arrow"><use xlink:href="/images/symbol-defs.svg#arrow"></use></svg>
-										<span>Предыдущая</span>
-									</a>
-								</li>
-								<li class="pagination-item">
-									<a class="page-link" href="#">1</a>
-								</li>
-								<li class="pagination-item">
-									<a class="page-link" href="#">2</a>
-								</li>
-								<li class="pagination-item _current">
-									<a class="page-link" href="#">3</a>
-								</li>
-								<li class="pagination-item">
-									<a class="page-link" href="#">4</a>
-								</li>
-								<li class="pagination-item">
-									<a class="page-link" href="#">5</a>
-								</li>
-								<li class="pagination-item pagination-item--dots">
-									<span>...</span>
-								</li>
-								<li class="pagination-item">
-									<a class="page-link" href="#">12</a>
-								</li>
-								<li class="pagination-button pagination-button-next">
-									<a class="page-link" href="#">
-										<span>Следующая</span>
-										<svg class="icon icon-arrow"><use xlink:href="/images/symbol-defs.svg#arrow"></use></svg>
-									</a>
-								</li>
-							</ul>
-							<div class="pagination-start">
-								<a href="#">В начало</a>
-							</div>
-						</div>
+						<!--#include virtual="/parts/pagination.html" -->
 					</div>
 
 					<!-- Section: Помочь с выбором? -->
