--- a/app/page-shop-catalog.html
+++ b/app/page-shop-catalog.html
@@ -106,32 +106,32 @@
 				<!-- Alphabet -->
 				<div class="shop-brands-alphabet mb-32">
 					<div class="alphabet">
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">A</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">B</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">C</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">D</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">E</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">F</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">G</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">H</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">I</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">J</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">K</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">L</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">M</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">N</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">O</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">P</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">Q</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">R</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">S</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">T</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">U</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">V</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">W</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">X</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">Y</a>
-						<a href="page-shop-brands.html" class="alphabet-letter border rounded-4">Z</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">A</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">B</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">C</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">D</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">E</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">F</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">G</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">H</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">I</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">J</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">K</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">L</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">M</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">N</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">O</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">P</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">Q</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">R</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">S</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">T</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">U</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">V</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">W</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">X</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">Y</a>
+						<a href="page-brands.html" class="alphabet-letter border rounded-4">Z</a>
 					</div>
 				</div>
 
@@ -139,7 +139,7 @@
 				<div class="shop-brands-list">
 					<div class="row row-items-24">
 						<div class="col-6 col-sm-4 col-md-3 col-xl-2">
-							<a href="page-shop-brands-single.html" class="brand">
+							<a href="page-brands-single.html" class="brand">
 								<div class="brand-logo img-scale border rounded-4">
 									<img src="images/dist/brands/1.png" alt="">
 								</div>
@@ -147,7 +147,7 @@
 							</a>
 						</div><!-- /.col -->
 						<div class="col-6 col-sm-4 col-md-3 col-xl-2">
-							<a href="page-shop-brands-single.html" class="brand">
+							<a href="page-brands-single.html" class="brand">
 								<div class="brand-logo img-scale border rounded-4">
 									<img src="images/dist/brands/2.png" alt="">
 								</div>
@@ -155,7 +155,7 @@
 							</a>
 						</div><!-- /.col -->
 						<div class="col-6 col-sm-4 col-md-3 col-xl-2">
-							<a href="page-shop-brands-single.html" class="brand">
+							<a href="page-brands-single.html" class="brand">
 								<div class="brand-logo img-scale border rounded-4">
 									<img src="images/dist/brands/3.png" alt="">
 								</div>
@@ -163,7 +163,7 @@
 							</a>
 						</div><!-- /.col -->
 						<div class="col-6 col-sm-4 col-md-3 col-xl-2">
-							<a href="page-shop-brands-single.html" class="brand">
+							<a href="page-brands-single.html" class="brand">
 								<div class="brand-logo img-scale border rounded-4">
 									<img src="images/dist/brands/4.png" alt="">
 								</div>
@@ -171,7 +171,7 @@
 							</a>
 						</div><!-- /.col -->
 						<div class="col-6 col-sm-4 col-md-3 col-xl-2">
-							<a href="page-shop-brands-single.html" class="brand">
+							<a href="page-brands-single.html" class="brand">
 								<div class="brand-logo img-scale border rounded-4">
 									<img src="images/dist/brands/1.png" alt="">
 								</div>
@@ -179,7 +179,7 @@
 							</a>
 						</div><!-- /.col -->
 						<div class="col-6 col-sm-4 col-md-3 col-xl-2">
-							<a href="page-shop-brands-single.html" class="brand">
+							<a href="page-brands-single.html" class="brand">
 								<div class="brand-logo img-scale border rounded-4">
 									<img src="images/dist/brands/2.png" alt="">
 								</div>
@@ -187,7 +187,7 @@
 							</a>
 						</div><!-- /.col -->
 						<div class="col-6 col-sm-4 col-md-3 col-xl-2">
-							<a href="page-shop-brands-single.html" class="brand">
+							<a href="page-brands-single.html" class="brand">
 								<div class="brand-logo img-scale border rounded-4">
 									<img src="images/dist/brands/3.png" alt="">
 								</div>
@@ -195,7 +195,7 @@
 							</a>
 						</div><!-- /.col -->
 						<div class="col-6 col-sm-4 col-md-3 col-xl-2">
-							<a href="page-shop-brands-single.html" class="brand">
+							<a href="page-brands-single.html" class="brand">
 								<div class="brand-logo img-scale border rounded-4">
 									<img src="images/dist/brands/4.png" alt="">
 								</div>
@@ -203,7 +203,7 @@
 							</a>
 						</div><!-- /.col -->
 						<div class="col-6 col-sm-4 col-md-3 col-xl-2">
-							<a href="page-shop-brands-single.html" class="brand">
+							<a href="page-brands-single.html" class="brand">
 								<div class="brand-logo img-scale border rounded-4">
 									<img src="images/dist/brands/1.png" alt="">
 								</div>
@@ -211,7 +211,7 @@
 							</a>
 						</div><!-- /.col -->
 						<div class="col-6 col-sm-4 col-md-3 col-xl-2">
-							<a href="page-shop-brands-single.html" class="brand">
+							<a href="page-brands-single.html" class="brand">
 								<div class="brand-logo img-scale border rounded-4">
 									<img src="images/dist/brands/2.png" alt="">
 								</div>
@@ -219,7 +219,7 @@
 							</a>
 						</div><!-- /.col -->
 						<div class="col-6 col-sm-4 col-md-3 col-xl-2">
-							<a href="page-shop-brands-single.html" class="brand">
+							<a href="page-brands-single.html" class="brand">
 								<div class="brand-logo img-scale border rounded-4">
 									<img src="images/dist/brands/3.png" alt="">
 								</div>
@@ -227,7 +227,7 @@
 							</a>
 						</div><!-- /.col -->
 						<div class="col-6 col-sm-4 col-md-3 col-xl-2">
-							<a href="page-shop-brands-single.html" class="brand">
+							<a href="page-brands-single.html" class="brand">
 								<div class="brand-logo img-scale border rounded-4">
 									<img src="images/dist/brands/4.png" alt="">
 								</div>
