Delivery page. Instructions page. FAQ page. Code refactoring.

--- a/app/index.html
+++ b/app/index.html
@@ -58,10 +58,13 @@
 					<ol class="pages-list">
 						<li><a href="page-home.html">Главная страница</a></li>
 						<li><a href="page-search.html">Результаты поиска</a></li>
-						<li><a href="page-testimonials.html">Отзывы</a></li>
 						<li><a href="page-brands.html">Производители</a></li>
 						<li><a href="page-brands-single.html">Производители: страница записи</a></li>
+						<li><a href="page-delivery.html">Доставка</a></li>
 						<li><a href="page-payment.html">Оплата</a></li>
+						<li><a href="page-testimonials.html">Отзывы</a></li>
+						<li><a href="page-instructions.html">Инструкции</a></li>
+						<li><a href="page-faq.html">FAQ</a></li>
 					</ol>
 				</div>
 				<div class="col-sm-6">
