--- a/app/page-shop-cart.html
+++ b/app/page-shop-cart.html
@@ -74,7 +74,7 @@
 								</div>
 							</div>
 							<div class="delete">
-								<a href="#" class="delete-btn" role="button" rel="nofollow">
+								<a href="#" class="delete-btn" data-toggle="tooltip" title="Удалить из корзины" data-placement="left" role="button" rel="nofollow">
 									<svg class="icon icon-trash-alt"><use xlink:href="images/symbol-defs.svg#trash-alt"></use></svg>
 								</a>
 							</div>
@@ -113,7 +113,7 @@
 								</div>
 							</div>
 							<div class="delete">
-								<a href="#" class="delete-btn" role="button" rel="nofollow">
+								<a href="#" class="delete-btn" data-toggle="tooltip" title="Удалить из корзины" data-placement="left" role="button" rel="nofollow">
 									<svg class="icon icon-trash-alt"><use xlink:href="images/symbol-defs.svg#trash-alt"></use></svg>
 								</a>
 							</div>
@@ -152,7 +152,7 @@
 								</div>
 							</div>
 							<div class="delete">
-								<a href="#" class="delete-btn" role="button" rel="nofollow">
+								<a href="#" class="delete-btn" data-toggle="tooltip" title="Удалить из корзины" data-placement="left" role="button" rel="nofollow">
 									<svg class="icon icon-trash-alt"><use xlink:href="images/symbol-defs.svg#trash-alt"></use></svg>
 								</a>
 							</div>
@@ -288,7 +288,7 @@
 												<input type="radio" name="checkout-delivery[]" id="checkout-delivery-1" placeholder="Имя" autocomplete="off" required>
 												<label for="checkout-delivery-1" class="form-radio-label">
 													Самовывоз
-													<span class="hint" data-toggle="tooltip" data-placement="bottom" title="г. Москва, ул. Летчика Бабушкина, д 103, кор. 4К, оф. 233"></span>
+													<div class="hint" data-toggle="tooltip" title="г. Москва, ул. Летчика Бабушкина, д 103, кор. 4К, оф. 233"></div>
 												</label>
 												<span class="form-radio-descr">Бесплатно</span>
 											</div>
@@ -298,7 +298,7 @@
 												<input type="radio" name="checkout-delivery[]" id="checkout-delivery-2" placeholder="Имя" autocomplete="off" required checked>
 												<label for="checkout-delivery-2" class="form-radio-label">
 													Доставка по Москве
-													<span class="hint" data-toggle="tooltip" data-placement="bottom" title="Доставка курьером до дверей"></span>
+													<abbr class="hint" data-toggle="tooltip" title="Доставка курьером до дверей"></abbr>
 												</label>
 												<span class="form-radio-descr">От 5 000 руб. бесплатно</span>
 											</div>
@@ -308,7 +308,7 @@
 												<input type="radio" name="checkout-delivery[]" id="checkout-delivery-3" placeholder="Имя" autocomplete="off" required>
 												<label for="checkout-delivery-3" class="form-radio-label">
 													Доставка транспортными компаниями по России
-													<span class="hint" data-toggle="tooltip" data-placement="bottom" title="Доставка ТК Почта России"></span>
+													<abbr class="hint" data-toggle="tooltip" title="Доставка ТК Почта России"></abbr>
 												</label>
 												<span class="form-radio-descr">От 5 000 руб. бесплатно</span>
 											</div>
@@ -353,7 +353,7 @@
 												<input type="radio" name="checkout-payments[]" id="checkout-payments-1" placeholder="Имя" autocomplete="off" required>
 												<label for="checkout-payments-1" class="form-radio-label">
 													Наличными
-													<span class="hint" data-toggle="tooltip" data-placement="bottom" title="Оплата наличными в пункте самовывоза"></span>
+													<abbr class="hint" data-toggle="tooltip" title="Оплата наличными в пункте самовывоза"></abbr>
 												</label>
 											</div>
 										</div><!-- /.col -->
@@ -362,7 +362,7 @@
 												<input type="radio" name="checkout-payments[]" id="checkout-payments-2" placeholder="Имя" autocomplete="off" required>
 												<label for="checkout-payments-2" class="form-radio-label">
 													Онлайн-оплата
-													<span class="hint" data-toggle="tooltip" data-placement="bottom" title="Оплата через онлайн банкинг"></span>
+													<abbr class="hint" data-toggle="tooltip" title="Оплата через онлайн банкинг"></abbr>
 												</label>
 											</div>
 										</div><!-- /.col -->
@@ -371,7 +371,7 @@
 												<input type="radio" name="checkout-payments[]" id="checkout-payments-3" placeholder="Имя" autocomplete="off" required checked>
 												<label for="checkout-payments-3" class="form-radio-label">
 													Оплата по счёту
-													<span class="hint" data-toggle="tooltip" data-placement="bottom" title="Оплата за реквизитами через банк"></span>
+													<abbr class="hint" data-toggle="tooltip" title="Оплата за реквизитами через банк"></abbr>
 												</label>
 											</div>
 										</div><!-- /.col -->
