--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -330,10 +330,10 @@
 				<div class="row flex-nowrap align-items-center">
 
 					<div class="col-auto header-bottom-catalog">
-						<button class="catalog-btn btn btn-yellow">
+						<a href="page-shop-catalog.html" class="catalog-btn btn btn-yellow">
 							<svg class="icon icon-bars"><use xlink:href="images/symbol-defs.svg#bars"></use></svg>
 							<span>Каталог</span>
-						</button>
+						</a>
 						<nav class="catalog-nav">
 							<ul class="catalog-nav-list">
 								<li class="catalog-nav-item">
