--- a/app/parts/home/advantages.html
+++ b/app/parts/home/advantages.html
@@ -4,45 +4,45 @@
 		<div class="section-heading">
 			<h1 class="title">Автоматика и комплектующие для ворот</h1>
 		</div>
-		<div class="h-advantages-wrapper row row-items-32 mt-32">
+		<div class="info-boxes row row-items-32 mt-32">
 			<div class="col-3">
-				<div class="h-advantages-item">
-					<figure class="picture">
+				<div class="info-box">
+					<figure class="info-box-picture">
 						<img src="./images/dist/icons/advantages/wallet.svg" alt="Различные формы оплаты">
 						<div class="blur"></div>
 					</figure>
-					<h4 class="title text-sm w-medium">Различные формы оплаты</h4>
-					<p class="descr text-xs">Наличные, картой, безналичный расчет</p>
+					<h4 class="info-box-title text-sm w-medium">Различные формы оплаты</h4>
+					<p class="info-box-descr text-gray-400 text-xs">Наличные, картой, безналичный расчет</p>
 				</div>
 			</div><!-- /.col -->
 			<div class="col-3">
-				<div class="h-advantages-item">
-					<figure class="picture">
+				<div class="info-box">
+					<figure class="info-box-picture">
 						<img src="./images/dist/icons/advantages/shield-check.svg" alt="Гарантия качества">
 						<div class="blur"></div>
 					</figure>
-					<h4 class="title text-sm w-medium">Гарантия качества</h4>
-					<p class="descr text-xs">На весь товар предоставляется гарантия от производителя. Также на наши услуги по установке и монтажу предоставляется гарантия 5 лет</p>
+					<h4 class="info-box-title text-sm w-medium">Гарантия качества</h4>
+					<p class="info-box-descr text-gray-400 text-xs">На весь товар предоставляется гарантия от производителя. Также на наши услуги по установке и монтажу предоставляется гарантия 5 лет</p>
 				</div>
 			</div><!-- /.col -->
 			<div class="col-3">
-				<div class="h-advantages-item">
-					<figure class="picture">
+				<div class="info-box">
+					<figure class="info-box-picture">
 						<img src="./images/dist/icons/advantages/coin.svg" alt="Цена">
 						<div class="blur"></div>
 					</figure>
-					<h4 class="title text-sm w-medium">Цена</h4>
-					<p class="descr text-xs">Мы следим за рыночными ценами, предоставляем скидки постоянным клиентам, а так же проводим регулярные акции</p>
+					<h4 class="info-box-title text-sm w-medium">Цена</h4>
+					<p class="info-box-descr text-gray-400 text-xs">Мы следим за рыночными ценами, предоставляем скидки постоянным клиентам, а так же проводим регулярные акции</p>
 				</div>
 			</div><!-- /.col -->
 			<div class="col-3">
-				<div class="h-advantages-item">
-					<figure class="picture">
+				<div class="info-box">
+					<figure class="info-box-picture">
 						<img src="./images/dist/icons/advantages/delivery.svg" alt="Доставка">
 						<div class="blur"></div>
 					</figure>
-					<h4 class="title text-sm w-medium">Доставка</h4>
-					<p class="descr text-xs">Удобная и быстрая доставка по Москве, МО и Росcии</p>
+					<h4 class="info-box-title text-sm w-medium">Доставка</h4>
+					<p class="info-box-descr text-gray-400 text-xs">Удобная и быстрая доставка по Москве, МО и Росcии</p>
 				</div>
 			</div><!-- /.col -->
 		</div><!-- /.row -->
