--- a/app/parts/shop/shop-sidebar.html
+++ b/app/parts/shop/shop-sidebar.html
@@ -23,7 +23,7 @@
 					<button class="btn btn-dropdown" type="button" data-toggle="collapse" data-target="#filter-body-1" aria-expanded="true" aria-controls="filter-body-1">
 						Бренды
 					</button>
-					<span class="hint" data-toggle="tooltip" data-placement="bottom" title="Компания-производитель"></span>
+					<abbr class="hint" data-toggle="tooltip" title="Компания-производитель"></abbr>
 				</div>
 				<div id="filter-body-1" class="filter-collapse collapse show" aria-labelledby="filter-header-1">
 					<div class="filter-body">
@@ -68,7 +68,7 @@
 			<div class="filter-item">
 				<div class="filter-header" id="filter-header-2">
 					<button class="btn btn-dropdown" type="button" data-toggle="collapse" data-target="#filter-body-2" aria-expanded="true" aria-controls="filter-body-2">Тип привода</button>
-					<span class="hint" data-toggle="tooltip" data-placement="bottom" title="Тип привода откатных ворот"></span>
+					<abbr class="hint" data-toggle="tooltip" title="Тип привода откатных ворот"></abbr>
 				</div>
 				<div id="filter-body-2" class="filter-collapse collapse show" aria-labelledby="filter-header-2">
 					<div class="filter-body">
