About company page. Services -single/page. Code refactoring.

--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -149,6 +149,8 @@
 
 	<!--#include virtual="/parts/mobile-menu.html" -->
 
+	<!--#include virtual="/parts/modals/callback.html" -->
+
 	<!--#include virtual="/parts/modals/check-order-status.html" -->
 
 	<!--#include virtual="/parts/modals/free-advice.html" -->
