--- a/app/parts/home/heroes.html
+++ b/app/parts/home/heroes.html
@@ -29,6 +29,9 @@
 							<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
 						</button>
 					</div><!-- /.h-heroes-slider-nav -->
+					<div class="h-heroes-slider-dots swiper-dots">
+						<div class="swiper-pagination swiper-pagination--light"></div>
+					</div><!-- /.h-heroes-slider-dots -->
 				</div><!-- /.h-heroes-slider -->
 			</div><!-- /.col -->
 			<div class="col-lg-auto">
