--- a/app/page-delivery.html
+++ b/app/page-delivery.html
@@ -26,7 +26,7 @@
 				<!-- Delivery Advantages -->
 				<div class="delivery-advantages">
 					<div class="row justify-content-center">
-						<div class="col-xl-8">
+						<div class="col-xl-10 col-xxl-8">
 							<div class="info-boxes row row-items-32">
 								<div class="col-3">
 									<div class="info-box">
@@ -75,7 +75,7 @@
 						<h2 class="title">Стоимость доставки</h2>
 					</div>
 					<div class="row justify-content-center">
-						<div class="col-xl-8">
+						<div class="col-xl-10 col-xxl-8">
 							<div class="table-responsive">
 								<table class="table-border">
 									<thead>
@@ -136,7 +136,7 @@
 						<h2 class="title">Стоимость доставки</h2>
 					</div>
 					<div class="row justify-content-center">
-						<div class="col-xl-8">
+						<div class="col-xl-10 col-xxl-8">
 							<article>
 								<ul>
 									<li>Доставка осуществляется бесплатно при заказе на сумму свыше 40000 руб. в пределах МКАД и до 20 км от МКАД.</li>
@@ -159,7 +159,7 @@
 						<h2 class="title">Стоимость доставки</h2>
 					</div>
 					<div class="row justify-content-center">
-						<div class="col-xl-8">
+						<div class="col-xl-10 col-xxl-8">
 							<article>
 								<ul>
 									<li>Доставка осуществляется каждый день с 9:00 до 21:00 в удобное для вас время!</li>
