Product single page (part 1 of 2). Other CSS fixes.

--- a/app/page-payment.html
+++ b/app/page-payment.html
@@ -28,11 +28,11 @@
 
 					<!-- Tabs -->
 					<div class="nav nav-tabs nav-tabs--dark" role="tablist">
-						<a id="tab-1" href="#pane-1" class="nav-link active" data-toggle="tab" role="tab">Наличный расчет</a>
-						<a id="tab-2" href="#pane-2" class="nav-link" data-toggle="tab" role="tab">Банковской картой</a>
-						<a id="tab-2" href="#pane-3" class="nav-link" data-toggle="tab" role="tab">Безналичный расчет</a>
-						<a id="tab-2" href="#pane-4" class="nav-link" data-toggle="tab" role="tab">Перевод на карты банков</a>
-						<a id="tab-2" href="#pane-5" class="nav-link" data-toggle="tab" role="tab">Электронные деньги</a>
+						<a href="#pane-1" class="nav-link active" data-toggle="tab" role="tab">Наличный расчет</a>
+						<a href="#pane-2" class="nav-link" data-toggle="tab" role="tab">Банковской картой</a>
+						<a href="#pane-3" class="nav-link" data-toggle="tab" role="tab">Безналичный расчет</a>
+						<a href="#pane-4" class="nav-link" data-toggle="tab" role="tab">Перевод на карты банков</a>
+						<a href="#pane-5" class="nav-link" data-toggle="tab" role="tab">Электронные деньги</a>
 					</div>
 
 					<!-- Tabs content -->
