--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -225,14 +225,14 @@
 						</div><!-- /.compare -->
 						<div class="compare d-none d-sm-block">
 							<div class="compare-icon">
-								<a href="#" class="btn btn-secondary btn-compare">
+								<a href="page-shop-compare.html" class="btn btn-secondary btn-compare">
 									<svg class="icon icon-compare"><use xlink:href="images/symbol-defs.svg#compare"></use></svg>
 								</a>
 							</div>
 						</div><!-- /.compare -->
 						<div class="wishlist d-none d-sm-block">
 							<div class="wishlist-icon">
-								<a href="#" class="btn btn-secondary btn-wishlist">
+								<a href="page-shop-wishlist.html" class="btn btn-secondary btn-wishlist">
 									<span class="badge">2</span>
 									<svg class="icon icon-star"><use xlink:href="images/symbol-defs.svg#star"></use></svg>
 								</a>
@@ -279,7 +279,7 @@
 						</div><!-- /.wishlist -->
 						<div class="shopping-cart">
 							<div class="shopping-cart-icon">
-								<a href="#" class="btn btn-secondary btn-shopping-cart">
+								<a href="page-shop-cart.html" class="btn btn-secondary btn-shopping-cart">
 									<span class="badge">11</span>
 									<svg class="icon icon-cart"><use xlink:href="images/symbol-defs.svg#cart"></use></svg>
 								</a>
