--- a/app/parts/mobile-menu.html
+++ b/app/parts/mobile-menu.html
@@ -35,7 +35,7 @@
 			</div><!-- /.mmenu-main-catalog -->
 
 			<div class="mmenu-main-actions">
-				<a href="#" class="shopping-cart">
+				<a href="page-shop-cart.html" class="shopping-cart">
 					<div class="shopping-cart-icon">
 						<button class="btn btn-secondary btn-shopping-cart">
 							<span class="badge">11</span>
@@ -47,7 +47,7 @@
 						<span class="total">2 500 Руб.</span>
 					</div>
 				</a><!--/.shopping-cart-->
-				<a href="#" class="compare">
+				<a href="page-shop-compare.html" class="compare">
 					<div class="compare-icon">
 						<button class="btn btn-secondary btn-compare">
 							<svg class="icon icon-compare"><use xlink:href="images/symbol-defs.svg#compare"></use></svg>
@@ -57,7 +57,7 @@
 						<span class="title">Сравнить товары</span>
 					</div>
 				</a><!-- /.compare -->
-				<a href="#" class="wishlist">
+				<a href="page-shop-wishlist.html" class="wishlist">
 					<div class="wishlist-icon">
 						<button class="btn btn-secondary btn-wishlist">
 							<svg class="icon icon-star"><use xlink:href="images/symbol-defs.svg#star"></use></svg>
