--- a/app/parts/modals/quick-view-product.html
+++ b/app/parts/modals/quick-view-product.html
@@ -155,7 +155,7 @@
 								<input type="text" class="quantity-value form-control" name="qv-product-quantity" value="1" step="1" min="1" max="99" title="Количество" readonly>
 								<button type="button" class="quantity-plus">+</button>
 							</div>
-							<button type="submit" class="btn btn-green btn-cart btn-submit">
+							<button type="submit" class="btn btn-green btn-purchase btn-submit">
 								<div class="before-added">В корзину</div>
 								<div class="after-added">
 									<svg class="icon icon-checked"><use xlink:href="images/symbol-defs.svg#checked"></use></svg>
