--- a/app/parts/products-card/product-1.html
+++ b/app/parts/products-card/product-1.html
@@ -48,7 +48,7 @@
 					<svg class="icon icon-star"><use xlink:href="images/symbol-defs.svg#star"></use></svg>
 				</a>
 			</div>
-			<button class="btn btn-green btn-cart _added">
+			<button class="btn btn-green btn-purchase _added">
 				<div class="before-added">В корзину</div>
 				<div class="after-added">
 					<svg class="icon icon-checked"><use xlink:href="images/symbol-defs.svg#checked"></use></svg>
