--- a/app/parts/shop/shop-sidebar.html
+++ b/app/parts/shop/shop-sidebar.html
@@ -20,9 +20,7 @@
 			</div><!-- /.filter-item -->
 			<div class="filter-item">
 				<div class="filter-header" id="filter-header-1">
-					<button class="btn btn-dropdown" type="button" data-toggle="collapse" data-target="#filter-body-1" aria-expanded="true" aria-controls="filter-body-1">
-						Бренды
-					</button>
+					<button class="btn btn-dropdown" type="button" data-toggle="collapse" data-target="#filter-body-1" aria-expanded="true" aria-controls="filter-body-1">Бренды</button>
 					<abbr class="hint" data-toggle="tooltip" title="Компания-производитель"></abbr>
 				</div>
 				<div id="filter-body-1" class="filter-collapse collapse show" aria-labelledby="filter-header-1">
