--- a/app/page-shop-compare.html
+++ b/app/page-shop-compare.html
@@ -35,8 +35,8 @@
 					<div class="compare-main-actions">
 						<div class="options">
 							<h4 class="mb-24">Параметры</h4>
-							<a href="#" class="options-btn _active" type="button" rel="nofollow">Все характеристики</a>
-							<a href="#" class="options-btn" type="button" rel="nofollow">Различающиеся</a>
+							<a href="#" class="options-btn _active" rel="nofollow">Все характеристики</a>
+							<a href="#" class="options-btn" rel="nofollow">Различающиеся</a>
 						</div>
 						<div class="categories">
 							<h4 class="mb-24">Категории</h4>
