--- a/app/parts/products-card/product-5.html
+++ b/app/parts/products-card/product-5.html
@@ -38,7 +38,7 @@
 					<svg class="icon icon-star"><use xlink:href="images/symbol-defs.svg#star"></use></svg>
 				</a>
 			</div>
-			<button class="btn btn-green btn-cart">
+			<button class="btn btn-green btn-purchase">
 				<div class="before-added">В корзину</div>
 				<div class="after-added">
 					<svg class="icon icon-checked"><use xlink:href="images/symbol-defs.svg#checked"></use></svg>
